@@ -1,4 +1,5 @@
 - Refactor: Refactor conclusion information provider to replace extended degree info hardcoded fields with dynamic fields [#qubIT-Fenix-6512]
+- Refactor: Fill CourseGroupDegreeInfo from registration conclusions [#UL-FBA-2061]
 
 7.24.11 (23-10-2025)
 - Refactor: Remove deprecated extended degree info controllers [#qubIT-Fenix-7466]
